# SLAMBot

./: .gitignore  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.md  FEATURE-REQUEST.md  config.yml
.github/workflows/: ros-ci.yml
slambot/: CHANGELOG.rst  CMakeLists.txt  package.xml
slambot_arduino/Dual_Motor_Check/: Dual_Motor_Check.ino
slambot_arduino/MPU6050_raw/: MPU6050_raw.ino
slambot_arduino/Single_Motor_Check/: Single_Motor_Check.ino
slambot_arduino/differential_drive/: differential_drive.ino
slambot_arduino/differential_drive_non_rosserial/: differential_drive_non_rosserial.ino
slambot_arduino/encoder_pulses_check/: encoder_pulses_check_standalone.ino
slambot_arduino/imu_sensor/: README.md  imu_sensor.ino
slambot_arduino/ros/: ros.ino
slambot_bringup/: CMakeLists.txt  package.xml
slambot_bringup/launch/: slambot_core.launch  slambot_lidar.launch  slambot_model.launch  slambot_remote.launch  slambot_robot.launch
slambot_bringup/launch/includes/: description.launch.xml
slambot_bringup/scripts/: create_udev_rules
slambot_description/: CMakeLists.txt  package.xml
slambot_description/config/: controller.yaml
slambot_description/gazebo/: slambot_materials.gazebo  slambot_physics.gazebo  slambot_plugins.gazebo
slambot_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
slambot_description/meshes/: Caster_Ball_Wheel_Small_v7_1.stl  RPLidar_v1_1.stl  lidar_1.stl  wheel_caster_1.stl  wheel_left_1.stl  wheel_right_1.stl
slambot_ros/: CMakeLists.txt  package.xml
slambot_simulation/: CMakeLists.txt  package.xml
(+22 files in other folders)
