<?xml version="1.0"?>
<package format="2">
  <name>slambot_bringup</name>
  <version>1.2.5</version>
  <description>
    roslaunch scripts for starting the slambot
  </description>
  <maintainer email="shobuj@todo.todo">shobuj</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  
  <depend>sensor_msgs</depend>
  
  <exec_depend>slambot_description</exec_depend>
  <exec_depend>slambot_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <!-- <exec_depend>realsense_camera</exec_depend> for slambot Waffle using Intel RealSense Camera -->
  <!-- <exec_depend>raspicam_node</exec_depend> for slambot Waffle Pi using Raspberry Pi Camera -->
</package>
